Fix CSS for wrapping cards

--- a/web/src/style/roles-section.module.css
+++ b/web/src/style/roles-section.module.css
@@ -21,5 +21,5 @@
     background-size: contain;
   }
   .roles{
-    @apply flex  items-center justify-center gap-4 w-full max-w-4xl ;
+    @apply flex flex-wrap items-center justify-center gap-4 w-full max-w-5xl ;
   }
